@@ -28,10 +28,11 @@ Build-Depends-Arch:
 # used by upstream to build perf documentation
  asciidoc-base <!stage1 !nodoc !pkg.linux.notools>,
  xmlto <!stage1 !nodoc !pkg.linux.notools>,
-# used by upstream to build perf
- bison <!stage1 !pkg.linux.notools !nopython>,
+# used by upstream to build kconfig and perf
+ bison <!stage1>,
 # - flex needs to run on the host; we have the same problem as for openssl
- flex (>= 2.6.1-1.1~) <!stage1 !pkg.linux.notools !nopython>,
+ flex (>= 2.6.1-1.1~) <!stage1>,
+# used by upstream to build perf
  gcc-multilib [amd64 ppc64 s390x sparc64] <!stage1 !pkg.linux.notools !nopython>,
  libaudit-dev <!stage1 !pkg.linux.notools !nopython>,
  libbabeltrace-dev (>= 1.5.0) <!stage1 !pkg.linux.notools !nopython>,
