@@ -18,6 +18,10 @@ linux (4.16~rc5-1~exp1) UNRELEASED; urgency=medium
   * [arm64] Apply patch from linux-next to fix eMMC corruption on
     Odroid-C2 (Closes: #879072).
 
+  [ Ben Hutchings ]
+  * debian/control: Update profile qualification for build-deps on bison
+    and flex, which are now used to build kconfig
+
  -- Uwe Kleine-König <ukleinek@debian.org>  Fri, 23 Feb 2018 13:08:33 +0100
 
 linux (4.15.4-1) unstable; urgency=medium
